[package]
name = "reinze-lib-common"
version = "0.1.0"
edition = "2018"
authors = ["Ryan W. O'Hara <ryan@git.ryanwohara.com"]
description = "A common set of functions for Reinze plugins."
homepage = "https://github.com/ryanwohara/reinze-lib-common"
keywords = ["reinze", "irc", "bot", "rust", "plugin"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ryanwohara/reinze-lib-common"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.8.2"
dotenv = "0.15.0"
format_num = "0.1.0"
log = "0.4"
mysql = "28.0.0"
regex = "1.12.3"
